--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
     <title>Advice for you</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
-<h1 id="mainHeader">What would you like <br> some <span>advice</span> on?</h1>
+    <h1 id="mainHeader">What would you like <br> some <span>advice</span> on?</h1>
     <input type="text" id="userInput">
-    <button id="getadvice">Get advice</button>
-<script src="main.js"></script>
+    <p></p>
+    <button id="getAdvice">Get advice</button>
+    <button id="randomAdvice">Random advice</button>
+    <script src="main.js"></script>
 </body>
 </html>
